tests/errors/data-col-mismatch.ssv
name:string
alice
bob | extra_data
